#2996 : (IE6) Eliminated the horizontal scrollbar from the toolbar combos, also fixing the scrollbars in context menus.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@3330 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/office2003/panel.css
+++ b/_source/skins/office2003/panel.css
@@ -33,6 +33,12 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
  * panel iframe.
  */
 
+html.cke_skin_office2003_container
+{
+	overflow: auto;
+	overflow-x: hidden;
+}
+
 body.cke_panel_frame
 {
 	overflow: auto;
